Fix bug 279270: when copying images, put only the image data on the clipboard so that applications that prefer text over image data don't just get the image location.